miniflux/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
spec:
  selector:
    matchLabels:
      app: miniflux
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: miniflux
    spec:
      containers:
        - name: miniflux
          image: miniflux/miniflux:2.0.38
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "100Mi"
              cpu: "20m"
