miniflux/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflux-ingress
  namespace: miniflux
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-stage"
spec:
  tls:
  - hosts:
    - news2.512.ch
    secretName: miniflux2-tls 
  rules:
  - host: news2.512.ch
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: miniflux
            port:
              number: 80
